# MicroCabal

./: .gitignore  11.yaml  LICENSE  Makefile  MicroCabal.cabal  README.md  TODO  global-hints.yaml
.github/workflows/: haskell.yml  mcabal-ci.yaml  mcabal-ci.yml
src/MicroCabal/: Cabal.hs  Env.hs  Glob.hs  Macros.hs  Main.hs  Normalize.hs  Parse.hs  Regex.hs  StackageList.hs  Unix.hs  YAML.hs
src/MicroCabal/Backend/: GHC.hs  MHS.hs
src/Text/: ParserComb.hs
tests/foreign-library/: TestForeignLibrary.hs  test-foreign-library.cabal
