cabal-version:         3.0
name:                  MicroCabal
version:               0.2.1.0
synopsis:              A partial Cabal replacement
license:               Apache-2.0
license-file:          LICENSE
copyright:             2024 Lennart Augustsson
category:              language
author:                lennart@augustsson.net
maintainer:            lennart@augustsson.net
stability:             experimental
description:           A portable subset of the Cabal functionality.
build-type:            Simple

extra-source-files:
                       LICENSE
                       Makefile
                       README.md

source-repository head
  type:                git
  location:            https://github.com/augustss/MicroCabal

executable mcabal
  default-language:    Haskell98
  hs-source-dirs:      src
  ghc-options:         -Wall -Wno-unrecognised-warning-flags -Wno-x-partial -main-is MicroCabal.Main
  main-is:             MicroCabal/Main.hs
  default-extensions:  MultiParamTypeClasses ScopedTypeVariables PatternGuards
  other-modules:       MicroCabal.Backend.GHC
                       MicroCabal.Backend.MHS
                       MicroCabal.Cabal
                       MicroCabal.Env
                       MicroCabal.Glob
                       MicroCabal.Normalize
                       MicroCabal.Parse
                       MicroCabal.Regex
                       MicroCabal.StackageList
                       MicroCabal.Unix
                       MicroCabal.YAML
                       Text.ParserComb
  build-depends:       base         >= 4.10 && < 4.25,
                       directory    >= 1.3 && < 1.6,
                       process      >= 1.6 && < 1.9,
